* add a "copy" icon to the editor to copy the contents of the editor * make the whole UI hidden until it's finished loading (prevent load flicker) * expose explorer.fetchManifest to support loading, and future manifest refreshes *

--- a/css/editor.css
+++ b/css/editor.css
@@ -11,6 +11,7 @@
     .file-tab {
         display: flex;
         flex-direction: row;
+        column-gap: var(--col-gap);
         height: 30px;
         background-color: var(--c-0);
         border-bottom: 1px solid var(--c-border);
